--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.2.0",
-    "@nuxtjs/tailwindcss": "^6.6.6",
-    "nuxt": "^3.4.0",
     "@nuxtjs/supabase": "^0.3.5",
-    "@supabase/supabase-js": "^2.20.0"
+    "@nuxtjs/tailwindcss": "^6.6.6",
+    "@supabase/supabase-js": "^2.20.0",
+    "nuxt": "^3.4.0"
+  },
+  "dependencies": {
+    "vuedraggable": "^4.1.0"
   }
 }
