--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxtjs/google-fonts": "^3.0.0",
     "@nuxtjs/supabase": "^0.3.5",
     "@nuxtjs/tailwindcss": "^6.6.6",
     "@supabase/supabase-js": "^2.20.0",
-    "nuxt": "^3.4.0"
+    "autoprefixer": "^10.4.14",
+    "nuxt": "^3.4.0",
+    "postcss": "^8.4.21"
   },
   "dependencies": {
     "@vueuse/components": "^9.13.0",
+    "dayjs": "^1.11.7",
     "vuedraggable": "^4.1.0"
   }
 }
