--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@nuxtjs/supabase": "^0.3.5",
     "@nuxtjs/tailwindcss": "^6.6.6",
     "@supabase/supabase-js": "^2.20.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/markdown-it": "^12.2.3",
     "autoprefixer": "^10.4.14",
+    "markdown-it": "^13.0.1",
     "nuxt": "^3.4.0",
     "postcss": "^8.4.21"
   },
