--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/google-fonts": "^3.0.0",
-    "@nuxtjs/i18n": "^8.0.0-beta.11",
     "@nuxtjs/supabase": "^0.3.5",
     "@nuxtjs/tailwindcss": "^6.6.6",
     "@supabase/supabase-js": "^2.20.0",
@@ -20,7 +19,8 @@
     "autoprefixer": "^10.4.14",
     "markdown-it": "^13.0.1",
     "nuxt": "^3.4.0",
-    "postcss": "^8.4.21"
+    "postcss": "^8.4.21",
+    "vue-i18n": "^9.2.2"
   },
   "dependencies": {
     "@vueuse/components": "^9.13.0",
